--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="overmij.html">geschiedenis</a></li>
-        <li><a href="info.html">speelschema's</a></li>
-        <li><a href="info.html">Informatie2</a></li>
+        <li><a href="info.html">competities</a></li>
+        <li><a href="info.html">clubs</a></li>
       </ul>
     </nav>
 
