--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="overmij.html">geschiedenis</a></li>
         <li><a href="info.html">competities</a></li>
         <li><a href="info.html">clubs</a></li>
+        li><a href="info.html">speelschema's</a></li>
       </ul>
     </nav>
 
