--- a/info.html
+++ b/info.html
@@ -18,8 +18,10 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
+        <li><a href="overmij.html">geschiedenis</a></li>
+        <li><a href="info.html">competities</a></li>
+        <li><a href="info.html">clubs</a></li>
+        <li><a href="info.html">speelschema's</a></li>
       </ul>
     </nav>
 
