--- a/competities.html
+++ b/competities.html
@@ -10,3 +10,7 @@
 
 <body>
   <div class="page">
+    <header>
+        <h1 id="hoofdtitel" class="belangrijk">competities</h1>
+      </header>
+  
