--- a/speelschema's.html
+++ b/speelschema's.html
@@ -10,3 +10,7 @@
 
 <body>
   <div class="page">
+    <header>
+        <h1 id="hoofdtitel" class="belangrijk">speelschema's</h1>
+      </header>
+  
