--- a/clubs.html
+++ b/clubs.html
@@ -19,9 +19,9 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="overmij.html">geschiedenis</a></li>
-        <li><a href="info.html">clubs</a></li>
-        <li><a href="info.html">competities</a></li>
-        <li><a href="info.html">speelschema's</a></li>
+        <li><a href="clubs.html">clubs</a></li>
+        <li><a href="competities.html">competities</a></li>
+        <li><a href="speelschema's.html">speelschema's</a></li>
       </ul>
     </nav>
 
