--- a/competities.html
+++ b/competities.html
@@ -14,3 +14,13 @@
         <h1 id="hoofdtitel" class="belangrijk">competities</h1>
       </header>
   
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="overmij.html">geschiedenis</a></li>
+          <li><a href="clubs.html">clubs</a></li>
+          <li><a href="competities.html">competities</a></li>
+          <li><a href="speelschema's.html">speelschema's</a></li>
+        </ul>
+      </nav>
+  
