--- a/competities.html
+++ b/competities.html
@@ -23,4 +23,8 @@
           <li><a href="speelschema's.html">speelschema's</a></li>
         </ul>
       </nav>
+      <footer>
+        <hr />
+        <p class="smalltext">--Emmauscollege-- --2023--</p>
+      </footer>
   
