--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <footer>
       <hr />
-      <p class="smalltext">--emmauscollege-- --2023--</p>
+      <p class="smalltext">--Emmauscollege-- --2023--</p>
     </footer>
 
   </div>
