--- a/clubs.html
+++ b/clubs.html
@@ -37,7 +37,7 @@
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">--Emmauscollege-- --2023--</p>
     </footer>
 
   </div>
