--- a/clubs.html
+++ b/clubs.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">geschiedenis</a></li>
+        <li><a href="geschiedenis.html">geschiedenis</a></li>
         <li><a href="clubs.html">clubs</a></li>
         <li><a href="competities.html">competities</a></li>
         <li><a href="speelschema's.html">speelschema's</a></li>
