--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     <main>
       <h2>home pagina</h2>
 
-
-
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+        <img class="item-plaatje" src= alt=>
         <p class="item-tekst">
           <a href=
             </a> 
