--- a/speelschema's.html
+++ b/speelschema's.html
@@ -20,7 +20,7 @@
           <li><a href="geschiedenis.html">geschiedenis</a></li>
           <li><a href="clubs.html">clubs</a></li>
           <li><a href="competities.html">competities</a></li>
-          <li><a href="speelschema's.html">speelschema's</a></li>
+          <li><a class="active" href="speelschema's.html">speelschema's</a></li>
         </ul>
       </nav>
       <footer>
