--- a/clubs.html
+++ b/clubs.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="geschiedenis.html">geschiedenis</a></li>
-        <li><a href="clubs.html">clubs</a></li>
+        <li><a class="active" href="clubs.html">clubs</a></li>
         <li><a href="competities.html">competities</a></li>
         <li><a href="speelschema's.html">speelschema's</a></li>
       </ul>
