--- a/competities.html
+++ b/competities.html
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="geschiedenis.html">geschiedenis</a></li>
           <li><a href="clubs.html">clubs</a></li>
-          <li><a href="competities.html">competities</a></li>
+          <li><a class="active" href="competities.html">competities</a></li>
           <li><a href="speelschema's.html">speelschema's</a></li>
         </ul>
       </nav>
