--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
       <h2>home pagina</h2>
 
       <div class="item">
-        <img class="item-plaatje" src= alt=>
-        <p class="item-tekst">
-          <a href=
-            </a> 
+        <p class="item-tekst1">
          
         </p>
       </div>
 
       <div class="item">
-        <p class="item-tekst">
+        <p class="item-tekst1">
           
         </p>
       </div>
