--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
       <div>
       <p class="item-tekst1">  
+        Het is onduidelijk wanneer en waar er voor het eerst voetbal werd gespeeld. Historici vonden in bronnen van over de hele wereld aanwijzingen die erop zouden wijzen dat de mens reeds lang voor de 19de eeuw voetbalachtige spellen speelde. Zo zou er in het China van de derde eeuw v.C. reeds een soort voetbal zijn gespeeld (cuju) waarbij het de bedoeling was om een leren bal, gevuld met veren, in het net van de tegenstander te krijgen. Ook bij de Romeinen en Oude Grieken zouden er reeds soorten voetbal hebben bestaan. Tijdens de Middeleeuwen speelde men in Engeland dan weer voetbal met een opgeblazen varkensblaas. Dit spel werd zo populair dat er in de dertiende eeuw een totaalverbod op kwam. De heersende klasse vond dat dit voetbalspel te veel afleidde van belangrijkere zaken. 
       </p>
     </div>
 
@@ -45,7 +46,7 @@
 
       <div>
         <p class="item-tekst4" >
-          
+
         </p>
       </div>
     </main>
