--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <h2>home pagina</h2>
 
       <div>
-      <p class="item-tekst1">  
+      <p class="item-tekst1"> 
+       <br>
+       <br>
+      <em>geschiedenis</em>
       </p>
     </div>
 
