--- a/index.html
+++ b/index.html
@@ -31,23 +31,28 @@
       <div>
       <p class="item-tekst1"> 
        <br>
-       <br>
       <em>geschiedenis</em>
       </p>
     </div>
 
     <div>
         <p class="item-tekst2">
+          <br>
+          <em>clubs</em>
         </p>
         </div>
 
       <div>
         <p class="item-tekst3">
+          <br>
+          <em>competities</em> 
         </p>
       </div>
 
       <div>
-        <p class="item-tekst4" >
+        <p class="item-tekst4">
+          <br>
+          <em>speelschema's</em>
         </p> 
       </div>
     <footer>
