--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <p class="item-tekst1"> 
        <br>
       <em>geschiedenis</em>
+      <img src="https://img.parool.nl/cb11dd859a034afcf28fc80549d97626479faf78/in-een-vuistdik-voetbalboek-schetst-sportschrijver-erik-brouwer-een-geschiedenis-van-volkssport-1">
       </p>
     </div>
 
