--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div>
       <p class="item-tekst1"> 
        <br>
-      <em>geschiedenis</em>
+       <a href="geschiedenis.html" target="_blank"><em>geschiedenis</em></a>
       <img src="https://img.parool.nl/cb11dd859a034afcf28fc80549d97626479faf78/in-een-vuistdik-voetbalboek-schetst-sportschrijver-erik-brouwer-een-geschiedenis-van-volkssport-1">
       </p>
     </div>
@@ -39,7 +39,7 @@
     <div>
         <p class="item-tekst2">
           <br>
-          <em>clubs</em>
+        
         </p>
         </div>
 
