--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
       <p class="item-tekst1"> 
        <br>
        <a href="geschiedenis.html" target="_blank"><em>geschiedenis</em></a>
-      <img src="https://img.parool.nl/cb11dd859a034afcf28fc80549d97626479faf78/in-een-vuistdik-voetbalboek-schetst-sportschrijver-erik-brouwer-een-geschiedenis-van-volkssport-1">
+      <img src="https://img.parool.nl/cb11dd859a034afcf28fc80549d97626479faf78/in-een-vuistdik-voetbalboek-schetst-sportschrijver-erik-brouwer-een-geschiedenis-van-volkssport-1" alt="plaatje geschiedenis">
       </p>
     </div>
 
     <div>
         <p class="item-tekst2">
           <br>
-        
+        <a href="clubs.html" target="_blank"><em>clubs</em></a>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRu5Ge3QxgJTR5DhcYjYXvukxeYaDnP1xS0lA&usqp=CAU" alt="plaatje manchester city"
         </p>
         </div>
 
