--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
      
         <p class="item-tekst1">
           <br>
+          <img src="https://img.volkskrant.nl/86db048d84eeaf410b26cbece4ad542ac97ec97f/de-fifa-wil-een-wk-voetbal-om-de-twee-jaar-is-dat-een-goed-idee">
           <a href="speelschema's.html" target="_blank"><em>speelschema's</em></a>
         </p>
       </div>
